convert to DTOs and add more tests